# guarda-sagra

./: .gitignore  README.md  dockerfile  guarda-sagra-postgres.sql  guarda-sagra-sqlite.sql  guarda-sagra.sql  pyproject.toml
.github/workflows/: python-app.yml
src/: __init__.py  config.py  main.py  main_window.py  profiles_logic.py  prova.py
src/api/: __init__.py  aree.py  articoli.py  connection.py  listini.py  ordini.py  profiles.py  profili.py  statistiche.py  tipologie.py  todos.py
src/api/templates/: index.html
src/flask_api/: __init__.py
src/ui/: __init__.py  articoli.py  cassa.py  funzioni_generiche.py  profili.py  report.py
src/ui/tabs/: __init__.py  articoli.py  cassa.py  profili.py  report.py
tests/: __init__.py  test_api.py  test_main_window.py  test_profiles_logic.py  test_tipologie.py
tests/api/: test_aree.py  test_articoli.py  test_listini.py  test_ordini.py  test_profili.py  test_statistiche.py  test_tipologie.py
tests/ui/: test_articoli.py  test_cassa.py  test_funzioni_generiche.py
