[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "guarda-sagra"
version = "0.0.1"
dependencies = ["ttkthemes", "requests", "flask", "psycopg2"]
requires-python = ">=3.8"
authors = [
    {name = "Giovanni Fornasier", email = "giovanni.fornasier@edu.unife.it"},
    {name = "Riccardo Fila", email = "riccardo.fila@edu.unife.it"}
]
maintainers = [
    {name = "Giovanni Fornasier", email = "giovanni.fornasier@edu.unife.it"},
    {name = "Riccardo Fila", email = "riccardo.fila@edu.unife.it"}
]
description = "Gestionale per i servizi delle sagre."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["sagra", "sagre", "gestionale", "manager"]

[project.scripts]
guarda-sagra = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]